chore: update information
Co-authored-by: TrueGRF <truegrf@truebrain.nl>

--- a/truegrf.yaml
+++ b/truegrf.yaml
@@ -1,4 +1,7 @@
 description: A new TrueGRF project
+grfid: f2abb1fb
 license: CC0-1.0
+name: hehehe
 type: townname
+url: https://github.com/L33-G/hehehe
 version: 6
